# image_convolution

./: CMakeLists.txt  README  convolve.cpp  experimentation.txt
